avoid cutting off bottom of letters, do not display separators with small screen

--- a/src/core_plugins/kibana/public/home/components/recently_accessed.less
+++ b/src/core_plugins/kibana/public/home/components/recently_accessed.less
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 768px) {
+  .recentlyAccessedSeparator {
+    display: none;
+  }
+}
+
 .recentlyAccessedItem {
   overflow: hidden;
   max-width: 300px;
@@ -7,10 +13,12 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: normal;
 }
 
 .recentlyAccessedDropwdownLink {
   white-space: nowrap;
+  height: 18px;
 }
 
 .recentlyAccessedDropdownLabel {
